--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Mac preference file (explaination: http://rixstep.com/1/20030521,00.shtml)
+.DS_Store
+
 # Eclipse-specific files
 .project
 .loadpath
