Fix theme black-splat and dum-dum

--- a/themes/black-splat/regions_blocks.yml
+++ b/themes/black-splat/regions_blocks.yml
@@ -1,6 +1,6 @@
 regions: [topright, content, sidebar0, sidebar1, sidebar2]
-topright: []
-content:  []
-sidebar0: []
-sidebar1: []
-sidebar2: []
+topright: [Search]
+content:  [GoogleMap, RecentContents(mode = preview)]
+sidebar0: [Chat]
+sidebar1: [ContentTypes, RecentContents(mode = title), Pages, Categories]
+sidebar2: [CurrentUser, Dict, Static, RemoteFeed]
