--- a/themes/black-splat/regions_blocks.yml
+++ b/themes/black-splat/regions_blocks.yml
@@ -2,5 +2,5 @@ regions: [topright, content, sidebar0, sidebar1, sidebar2]
 topright: [Search]
 content:  [GoogleMap, RecentContents(mode = preview)]
 sidebar0: [Chat]
-sidebar1: [ContentTypes, RecentContents(mode = title), Pages, Categories, Toc]
+sidebar1: [ContentTypes, RecentContents(mode = title), Pages, Categories, Link]
 sidebar2: [CurrentUser, Dict, Static, RemoteFeed]
