--- a/themes/dum-dum/regions_blocks.yml
+++ b/themes/dum-dum/regions_blocks.yml
@@ -1,3 +1,3 @@
 regions: [content, sidebar]
 content: [GoogleMap, RecentContents(mode = preview)]
-sidebar: [Search, CurrentUser, Chat, Dict, ContentTypes, RecentContents(mode = title), Static, RemoteFeed, Pages, Categories, Link]
+sidebar: [Search, CurrentUser, Chat, Dict, ContentTypes, RecentContents(mode = title), Static, RemoteFeed, Pages, Categories, TopUsers, TopContents, Link]
